--- a/function/input-text-reverser-lambda/pom.xml
+++ b/function/input-text-reverser-lambda/pom.xml
@@ -9,7 +9,6 @@
   <version>1.0-SNAPSHOT</version>
   <name>input-text-reverser-lambda</name>
 
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
@@ -22,11 +21,12 @@
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.2.3</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>3.11.4</version>
-    </dependency>
+    </dependency> -->
     <!--
     <dependency>
       <groupId>com.amazonaws</groupId>
@@ -38,6 +38,7 @@
       <artifactId>powertools-logging</artifactId>
       <version>1.18.0</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>software.amazon.lambda</groupId>
       <artifactId>powertools-tracing</artifactId>
@@ -47,7 +48,7 @@
       <groupId>software.amazon.lambda</groupId>
       <artifactId>powertools-metrics</artifactId>
       <version>1.18.0</version>
-    </dependency>
+    </dependency> -->
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
@@ -59,11 +60,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <!--
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.16.1</version>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <build>
@@ -109,16 +111,17 @@
           <aspectLibraries>
             <aspectLibrary>
               <groupId>software.amazon.lambda</groupId>
+              <artifactId>powertools-logging</artifactId>
+            </aspectLibrary>
+            <!--
+            <aspectLibrary>
+              <groupId>software.amazon.lambda</groupId>
               <artifactId>powertools-tracing</artifactId>
             </aspectLibrary>
             <aspectLibrary>
               <groupId>software.amazon.lambda</groupId>
-              <artifactId>powertools-logging</artifactId>
-            </aspectLibrary>
-            <aspectLibrary>
-              <groupId>software.amazon.lambda</groupId>
               <artifactId>powertools-metrics</artifactId>
-            </aspectLibrary>
+            </aspectLibrary> -->
           </aspectLibraries>
         </configuration>
         <executions>
